CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(LH_CONFIGURE)

SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(LIBRARY_OUTPUT_PATH ${LH_CONFIGURE_BINARY_DIR}/lib)
SET(CMAKE_CXX_FLAGS "-g -pipe -W -Wall -fPIC")
SET(WORK_ROOT "../../../..")

AUX_SOURCE_DIRECTORY(src SOURCES)
SET(SRC_LIST ${SOURCES})

INCLUDE_DIRECTORIES(
    "./include"
    "${LH_CONFIGURE_SOURCE_DIR}/${WORK_ROOT}/third/boost/boost-1.56.0/include"
)

ADD_LIBRARY(lh_configure ${SRC_LIST})

ADD_CUSTOM_COMMAND(
    TARGET lh_configure
    POST_BUILD
    COMMAND mkdir -p output
    COMMAND cp -r ${LH_CONFIGURE_SOURCE_DIR}/include output
    COMMAND cp -r lib output
)
